# netcommander

./: .env.example  .gitignore  .pre-commit-config.yaml  API_SPECIFICATION.md  AUTOMATIONS.md  CHANGELOG.md  CLI_USAGE.md  CONTRIBUTING.md  CONTROL-FINDINGS.md  DEFINITIVE_MAPPING.md  DEPLOYMENT.md  DEV-SETUP.md  FACTORY_RESET_GUIDE.md  FILE_CLEANUP_ANALYSIS.md  FINDINGS.md  HACS_RELEASE_GUIDE.md  HACS_SUBMISSION.md  HACS_TROUBLESHOOTING.md  INSTALLATION.md  INTEGRATION_SUMMARY.md  LICENSE  Makefile  NEXT-STEPS.md  OUTLET_MAPPING.md  README.md  RELEASE_CHECKLIST.md  TESTING.md  debug_outlet_mapping.py  fetch_js.py  info.md  main_page.html  netcommander_api.py  openapi.yaml  outlet_mapping_results_20251015_131625.json  physical_outlet_test.md  pwr_page.html  pyproject.toml  requirements-dev.txt  syn.js  syn1.js  (+26 more)
.github/ISSUE_TEMPLATE/: bug_report.md  device_compatibility.md  feature_request.md
.github/workflows/: hacs.yaml  release.yaml
custom_components/netcommander/: __init__.py  api.py  button.py  config_flow.py  const.py  coordinator.py  hacs.json  manifest.json  sensor.py  services.yaml  strings.json  switch.py
custom_components/netcommander/lib/: __init__.py
custom_components/netcommander/lib/netcommander_lib/: __init__.py  client.py  exceptions.py  models.py
custom_components/netcommander/translations/: en.json
doc/: ttyACM.md
netcommander.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
netcommander_cli/: __init__.py  cli.py
src/netcommander/: __init__.py  client.py  const.py  models.py
tests/: __init__.py  conftest.py  test_client.py  test_ha_config_flow.py  test_ha_coordinator.py  test_integration.py  test_models.py
